--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!--Contacts-->
                 <div class="contacts-content-wrap">
                     <div class="contacts">
-                        <h3 class="sidebar-title">Contacts</h3>
+                        <p class="sidebar-title">Contacts</p>
                         <ul class="contact-list list">
                             <li class="contact-item">
                                 <a href="tel:+380966906086" class="contact-icon-link link">
@@ -59,7 +59,7 @@
                     </div>    
                     <!--Tech skills-->
                     <div class="tech-skills">
-                        <h3 class="sidebar-title">Tech Skills</h3>              
+                        <p class="sidebar-title">Tech Skills</p>              
                         <ul class="tech-skills-list">
                             <li class="tech-skills-item"><span class="tech-skills-text">Figma</span></li>
                             <li class="tech-skills-item"><span class="tech-skills-text">Photoshop</span></li>
@@ -72,7 +72,7 @@
                     </div>
                     <!--Soft Skills--> 
                     <div class="soft-skills">
-                        <h3 class="sidebar-title">Soft Skills</h3>
+                        <p class="sidebar-title">Soft Skills</p>
                         <ul class="soft-skills-list">
                             <li class="soft-skills-item"><span class="soft-skills-text">Scrum</span></li>
                             <li class="soft-skills-item"><span class="soft-skills-text">Agile</span></li>
