--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                             <li class="tech-skills-item"><span class="tech-skills-text">Figma</span></li>
                             <li class="tech-skills-item"><span class="tech-skills-text">Photoshop</span></li>
                             <li class="tech-skills-item"><span class="tech-skills-text">Illustration</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">Sketch</span></li>
+                            <!-- <li class="tech-skills-item"><span class="tech-skills-text">Sketch</span></li>
                             <li class="tech-skills-item"><span class="tech-skills-text">Wireframes</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">Webflow</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">HTML,CSS</span></li>
+                            <li class="tech-skills-item"><span class="tech-skills-text">Webflow</span></li> -->
+                            <li class="tech-skills-item"><span class="tech-skills-text">HTML, CSS</span></li>
                         </ul>
                     </div>
                     <!--Soft Skills--> 
@@ -133,7 +133,7 @@
                     <h3 class="title">Work Experience</h3>
                     <!--Company1-->
                     <div>
-                        <h4 class="work-position">UX/UI designer <span class="oranization">Freelance</span></h4>
+                        <h4 class="work-position accent">UX/UI designer <span class="oranization">Freelance</span></h4>
                         <p class="period">May 2022 - up to now <span class="line"> | </span> Remotely</p>
                         <ul class="work-list">
                             <li class="work-list-item">Drawing of landing page designs, multi-page sites.</li>
@@ -162,11 +162,11 @@
                     <h3 class="title">Additional education</h3>
                     <ul class="education-item">
                         <li class="education-list list">
-                            <p class="management">Online curs Front-End Developer</p>
+                            <p class="management accent">Online curs Front-End Developer</p>
                             <p class="period">October 2022 - Up to now <span class="line"> | </span> Ukraine</p>
                         </li>
                         <li class="education-list list">
-                            <p class="management">Online curs UI/UX designer</p>
+                            <p class="management accent">Online curs UI/UX designer</p>
                             <p class="period">Jule 2022 - September 2022 <span class="line"> | </span> Ukraine</p>
                         </li>
                         <li class="education-list list">
