--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <li class="contact-item">
                                 <a href="mailto:kasianenko.elena.a@gmail.com" class="contact-icon-link link">
                                     <svg class="contact-icon" width="15" height="15">
-                                        <use href="./img/icons.svg#icon-email"></use>
+                                        <use href="./img/icons.svg#icon-envelope"></use>
                                     </svg>
                                 </a>                           
                                 <a href="mailto:kasianenko.elena.a@gmail.com" class="contact-link">kasianenko.elena.a@gmail.com</a>
@@ -61,23 +61,23 @@
                     <div class="tech-skills">
                         <p class="sidebar-title">Tech Skills</p>              
                         <ul class="tech-skills-list">
-                            <li class="tech-skills-item"><span class="tech-skills-text">Figma</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">Photoshop</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">Illustration</span></li>
-                            <!-- <li class="tech-skills-item"><span class="tech-skills-text">Sketch</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">Wireframes</span></li>
-                            <li class="tech-skills-item"><span class="tech-skills-text">Webflow</span></li> -->
-                            <li class="tech-skills-item"><span class="tech-skills-text">HTML, CSS</span></li>
+                            <li class="tech-skills-item accent-2"><span class="tech-skills-text">Figma</span></li>
+                            <li class="tech-skills-item accent-2"><span class="tech-skills-text">Photoshop</span></li>
+                            <li class="tech-skills-item accent-2"><span class="tech-skills-text">Illustration</span></li>
+                            <!-- <li class="tech-skills-item accent-2"><span class="tech-skills-text">Sketch</span></li>
+                            <li class="tech-skills-item accent-2"><span class="tech-skills-text">Wireframes</span></li>
+                            <li class="tech-skills-item accent-2"><span class="tech-skills-text">Webflow</span></li> -->
+                            <li class="tech-skills-item accent-2"><span class="tech-skills-text">HTML, CSS</span></li>
                         </ul>
                     </div>
                     <!--Soft Skills--> 
                     <div class="soft-skills">
                         <p class="sidebar-title">Soft Skills</p>
                         <ul class="soft-skills-list">
-                            <li class="soft-skills-item"><span class="soft-skills-text">Scrum</span></li>
-                            <li class="soft-skills-item"><span class="soft-skills-text">Agile</span></li>
-                            <li class="soft-skills-item"><span class="soft-skills-text">GTD</span></li>
-                            <li class="soft-skills-item"><span class="soft-skills-text">Teamwork</span></li>
+                            <li class="soft-skills-item accent-2"><span class="soft-skills-text">Scrum</span></li>
+                            <li class="soft-skills-item accent-2"><span class="soft-skills-text">Agile</span></li>
+                            <li class="soft-skills-item accent-2"><span class="soft-skills-text">GTD</span></li>
+                            <li class="soft-skills-item accent-2"><span class="soft-skills-text">Teamwork</span></li>
                         </ul> 
                     </div>
                 </div>                
@@ -89,7 +89,7 @@
                 <!--About user-->
                 <div class="about content">
                     <div class="position-name">
-                        <h2 class="about-position">UI/UX designer</h2>
+                        <h2 class="about-position accent-2">UI/UX designer</h2>
                         <h1 class="about-name">Olena Kasianenko</h1>                      
                     </div>                      
                     <ul class="general">
@@ -136,18 +136,18 @@
                         <h4 class="work-position accent">UX/UI designer <span class="oranization">Freelance</span></h4>
                         <p class="period">May 2022 - up to now <span class="line"> | </span> Remotely</p>
                         <ul class="work-list">
-                            <li class="work-list-item">Drawing of landing page designs, multi-page sites.</li>
+                            <li class="work-list-item">Drawing of landing page designs, multi-page sites</li>
                             <li class="work-list-item">Conducting UX research, definition and segmentation of the target audience, analysis of competitors, compilation of site
-                            scripts.</li>
-                            <li class="work-list-item">Creation of moodboards and design concepts.</li>
-                            <li class="work-list-item">Creating a site map, user flow.</li>
-                            <li class="work-list-item">Drawing sketches, developing prototypes.</li>
-                            <li class="work-list-item">Development of responsive designs for mobile devices and tablets.</li>
-                            <li class="work-list-item">Development of icons, logos.</li>
-                            <li class="work-list-item">Ui-kit.</li>
-                            <li class="work-list-item">Site audit.</li>
-                            <li class="work-list-item">Development of animations for websites.</li>
-                            <li class="work-list-item">Website development on Webflow.</li>    
+                            scripts</li>
+                            <li class="work-list-item">Creation of moodboards and design concepts</li>
+                            <li class="work-list-item">Creating a site map, user flow</li>
+                            <li class="work-list-item">Drawing sketches, developing prototypes</li>
+                            <li class="work-list-item">Development of responsive designs for mobile devices and tablets</li>
+                            <li class="work-list-item">Development of icons, logos</li>
+                            <li class="work-list-item">Ui-kit</li>
+                            <li class="work-list-item">Site audit</li>
+                            <li class="work-list-item">Development of animations for websites</li>
+                            <li class="work-list-item">HTML5 site layout</li>    
                         </ul>
                     </div>                    
                 </div>
