--- a/index.html
+++ b/index.html
@@ -232,6 +232,17 @@
               </li>
               <li class="projects-item">
                 <div class="projects-item-content">
+                  <p class="projects-item-name">Portfolio website</p>
+                  <p class="projects-item-type">Design</p>
+                  <a
+                    href="https://www.behance.net/gallery/171288583/Portfolio-website"
+                    class="project-link"
+                    >https:https://www.behance.net/gallery/171288583/Portfolio-website</a
+                  >
+                </div>
+              </li>
+              <li class="projects-item">
+                <div class="projects-item-content">
                   <p class="projects-item-name">
                     Landing page for ceramic heaters
                   </p>
