--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                   <a
                     href="https://www.behance.net/gallery/153436095/HotelE-commerce-Concept/"
                     class="project-link"
+                    target="_blank"
                     >https://www.behance.net/gallery/153436095/HotelE-commerce-Concept</a
                   >
                 </div>
@@ -226,6 +227,7 @@
                   <a
                     href="https://www.behance.net/gallery/170975721/Barbershop"
                     class="project-link"
+                    target="_blank"
                     >https:https://www.behance.net/gallery/170975721/Barbershop</a
                   >
                 </div>
@@ -237,6 +239,7 @@
                   <a
                     href="https://www.behance.net/gallery/171288583/Portfolio-website"
                     class="project-link"
+                    target="_blank"
                     >https:https://www.behance.net/gallery/171288583/Portfolio-website</a
                   >
                 </div>
@@ -250,6 +253,7 @@
                   <a
                     href="https://www.behance.net/gallery/154972211/Landing-page-for-ceramic-metal-heaters-UDEN-S"
                     class="project-link"
+                    target="_blank"
                     >https://www.behance.net/gallery/154972211/Landing-page-for-ceramic-metal-heaters-UDEN-S</a
                   >
                 </div>
@@ -265,6 +269,7 @@
                   <a
                     href="https://alexgoit.github.io/olkas-shop/"
                     class="project-link"
+                    target="_blank"
                     >https://alexgoit.github/olkas-shop/</a
                   >
                 </div>
@@ -276,6 +281,7 @@
                   <a
                     href="https://olenakas.github.io/goit-markup-hw-07/index.html#"
                     class="project-link"
+                    target="_blank"
                     >https://olenakas.github.io/goit-markup-hw-07/index.html#</a
                   >
                 </div>
@@ -289,6 +295,7 @@
                   <a
                     href="https://alexgoit.github.io/simply-chocolate/"
                     class="project-link"
+                    target="_blank"
                     >https://alexgoit.github.io/simply-chocolate/</a
                   >
                 </div>
@@ -303,12 +310,14 @@
                     <a
                       href="https://www.behance.net/gallery/150527397/Eyelash-and-eyebrow-lamination-in-Warsaw"
                       class="project-link"
+                      target="_blank"
                       >https://www.behance.net/gallery/150527397/Eyelash-and-eyebrow-lamination-in-Warsaw</a
                     >
                     <br />
                     <a
                       href="https://olenakas.github.io/lamination-eyelashes-eyebrows2/english.html"
                       class="project-link"
+                      target="_blank"
                       >https://olenakas.github.io/lamination-eyelashes-eyebrows2/english.html</a
                     >
                   </div>
