--- a/index.html
+++ b/index.html
@@ -222,6 +222,21 @@
               </li>
               <li class="projects-item">
                 <div class="projects-item-content">
+                  <p class="projects-item-name">
+                    Portable gas stove sales landing page/p>
+                  </p>
+                  <p class="projects-item-type">Design</p>
+                  <a
+                    href="https://www.behance.net/gallery/171430903/Portable-Gas-Stove-Sales-Landing-Page"
+                    class="project-link"
+                    target="_blank"
+                    >https://www.behance.net/gallery/171430903/Portable-Gas-Stove-Sales-Landing-Page</a
+                  >
+                </div>
+              </li>
+
+              <li class="projects-item">
+                <div class="projects-item-content">
                   <p class="projects-item-name">Barbershop website</p>
                   <p class="projects-item-type">Design</p>
                   <a
