add streaming service

--- a/index.html
+++ b/index.html
@@ -207,7 +207,15 @@
           <!--Projects-->
           <div class="projects content">
             <h3 class="title">Projects</h3>
-            <ol class="projects-list">
+            <ul class="projects-list">
+              <li class="projects-item">
+                <div class="projects-item-content">
+                  <p class="projects-item-name">Streaming service</p>
+                  <p class="projects-item-type">Design</p>
+                  <a href="https://https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept/" class="project-link"
+                    target="_blank">https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept</a>
+                </div>
+              </li>
               <li class="projects-item">
                 <div class="projects-item-content">
                   <p class="projects-item-name">Multi-page hotel website</p>
@@ -338,7 +346,7 @@
                   </div>
                 </div>
               </li> -->
-            </ol>
+            </ul>
           </div>
           <!--Work-->
           <div class="work content">
