--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="projects-item-content">
                   <p class="projects-item-name">Streaming service</p>
                   <p class="projects-item-type">Design</p>
-                  <a href="https://https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept/" class="project-link"
+                  <a href="https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept" class="project-link"
                     target="_blank">https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept</a>
                 </div>
               </li>
