--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
                 <div class="projects-item-content">
                   <p class="projects-item-name">Streaming service</p>
                   <p class="projects-item-type">Design</p>
-                  <a href="https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept" class="project-link"
+                  <a
+                   href="https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept"
+                    class="project-link"
                     target="_blank">https://www.behance.net/gallery/172815889/Movie-viewing-serviceconcept</a>
                 </div>
               </li>
@@ -231,7 +233,7 @@
               <li class="projects-item">
                 <div class="projects-item-content">
                   <p class="projects-item-name">
-                    Portable gas stove sales landing page/p>
+                    Portable gas stove sales landing page
                   </p>
                   <p class="projects-item-type">Design</p>
                   <a
